# ctfd-solve-announcer-discord

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: ctfd.rs  main.rs
