[package]
name = "ctfd-solve-announcer-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0.22", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.12"
sqlite = "0.28.1"
